<resources>
    <string name="app_name">Login</string>
    <string name="Login">Login</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="button">Button</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="lorem">The link to reset your password will be sent to your registered email.</string>
    <string name="email">Email</string>
    <string name="continu">CONTINUE</string>
    <string name="this_is_not_a_valid_email">This is not a valid email</string>
    <string name="this_email_is_not_registered_with_us">This email is not registered with us.</string>
    <string name="forgot_password_c">FORGOT PASSWORD</string>
    <string name="the_link_has_been_sent_to_your_email">The link has been sent to your email.</string>
    <string name="the_generated_link_will_be_active_for_24_hours">The generated link will be active for 24 hours.</string>

</resources>
